--- a/demo/demo.html
+++ b/demo/demo.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <script type="module" src="../index.js"></script>
+  <script type="module" src="../dist/venus-ui.js"></script>
   <lcd-number value="19" color="#557722" size="140"></lcd-number>
 </body>
 
