--- a/demo/demo.html
+++ b/demo/demo.html
@@ -21,13 +21,13 @@
       border: 1px solid #123123;
       overflow: hidden;
     }
-    @keyframes moveTheWave {
-      0% { transform: translate3d(0, 0, 0);}
-      100% { transform: translate3d(-400%, 0, 0); }
+    /* @keyframes moveTheWave {
+      0% { transform: translate3d(var(--dw), 0, 0);}
+      100% { transform: translate3d(var(--dow), 0, 0); }
     }
     .animation {
       animation: moveTheWave var(--d) linear infinite;  
-    }
+    } */
   
   </style>
   <script type="module" src="../dist/venus-ui.js"></script>
