--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,15 +11,23 @@
       font-size: 16px;
       line-height: 2;
     }
-    .waves{
+    .wrapper{
       position: relative;
       width: 400px;
-      height: 300px;
+      height: 120px;
       display: block;
       background-color: #fff;
       border-radius: 5px;
       border: 1px solid #123123;
       overflow: hidden;
+      padding: 5px;
+    }
+    .waves{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      bottom: 0;
+      left: 0;
     }
     /* @keyframes moveTheWave {
       0% { transform: translate3d(var(--dw), 0, 0);}
@@ -28,6 +36,12 @@
     .animation {
       animation: moveTheWave var(--d) linear infinite;  
     } */
+    .inner-wrapper{
+      width: 100%;
+      height: 100%;
+      background-color: #123321;
+      color: #fff;
+    }
   
   </style>
   <script type="module" src="../dist/venus-ui.js"></script>
@@ -35,7 +49,10 @@
 
 <body>
   <lcd-number value="19" color="#557722" size="140"></lcd-number>
-  <venus-waves class="waves" num="4" color="rgba(51,95,200, 0.3)" svgHeight="60"></venus-waves>
+  <div class="wrapper">
+      aa  asdasd asdas
+    <venus-waves class="waves" num="4" color="rgba(51,95,200, 0.3)" svgHeight="60" animation="hover"></venus-waves>
+  </div>
   <script>
     window.onload = function() {
       const waves = document.querySelector('.waves')
