--- a/demo/demo.html
+++ b/demo/demo.html
@@ -29,13 +29,6 @@
       left: 0;
       z-index: -1;
     }
-    /* @keyframes moveTheWave {
-      0% { transform: translate3d(var(--dw), 0, 0);}
-      100% { transform: translate3d(var(--dow), 0, 0); }
-    }
-    .animation {
-      animation: moveTheWave var(--d) linear infinite;  
-    } */
     .inner-wrapper{
       width: 100%;
       height: 100%;
@@ -48,7 +41,17 @@
 </head>
 
 <body>
-  <lcd-number value="19" color="#557722" size="140"></lcd-number>
+  <div class='lcd-number-wrapper'>
+    <lcd-number id='lcd' value="19" color="#ff0859" size="140" background="#000" defaultColor="#333"></lcd-number>
+    <div class='control'>
+      <p>
+        <span>数值：</span><input id='lcdValue' value="19" type="number">
+      </p>
+      <p>
+        <span>字体大小：</span><input id='lcdValue' value="140" type="number">
+      </p>
+    </div>
+  </div>
   <div class="wrapper">
     <div style="z-index: 1;" id="test">paused</div>
     <venus-waves class="waves" num="4" color="rgba(51,95,200, 0.3)" svgHeight="60" animation="animation"></venus-waves>
@@ -59,6 +62,11 @@
       const waves = document.querySelector('.waves')
       test.addEventListener('click', () => {
         waves.setAttribute('animation', waves.getAttribute('animation') === 'animation' ? "none" : "animation")
+      })
+      const lcd = document.getElementById('lcd')
+      const lcdValue = document.getElementById('lcdValue')
+      lcdValue.addEventListener('input', (e) => {
+        lcd.setAttribute('value', e.target.value)
       })
     }
   </script>
