--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-  <title>wired-radio demo</title>
+  <title>demo</title>
   <style>
     body {
       font-family: sans-serif;
